# DealNo-Solver

./: .gitignore  README.md  auto.html  custom tracking.py  index.html  object track test.py  pyproject.toml  requirements.txt  slomo.html
cpp/: Deal No Solver.sln
cpp/Deal No Solver/: Box.hpp  Case.hpp  Deal No Solver.vcxproj  Deal No Solver.vcxproj.filters  FixedQueue.hpp  main.cpp
